--- a/install
+++ b/install
@@ -17,19 +17,14 @@ Function Remove-ZipFile {
             }
 
             if ($fileInUse) {
-                Log-Message "Файл $filePath занят другим процессом. Невозможно удалить."
                 exit 1
             }
 
             # Удаление файла
             Remove-Item -Path $filePath -Force
-            Log-Message "Файл $filePath успешно удален."
         } catch {
-            Log-Message "Ошибка при удалении файла $filePath: $_"
             exit 1
         }
-    } else {
-        Log-Message "Файл $filePath не существует, удаление не требуется."
     }
 }
 
@@ -41,9 +36,7 @@ Function Download-File {
     )
     try {
         Invoke-WebRequest -Uri $url -OutFile $savePath -ErrorAction Stop
-        Log-Message "Файл успешно скачан: $savePath"
     } catch {
-        Log-Message "Ошибка при скачивании файла: $_"
         exit 1
     }
 }
@@ -57,9 +50,7 @@ Function Unpack-Zip {
     try {
         Add-Type -AssemblyName System.IO.Compression.FileSystem
         [System.IO.Compression.ZipFile]::ExtractToDirectory($filePath, $extractTo)
-        Log-Message "Файлы успешно распакованы в папку: $extractTo"
     } catch {
-        Log-Message "Ошибка при распаковке файла: $_"
         exit 1
     }
 }
@@ -72,17 +63,12 @@ try {
     $downloadsPath = Join-Path -Path $userProfilePath -ChildPath "Downloads"
     $desktopPath = Join-Path -Path $userProfilePath -ChildPath "Desktop"
     $zipPath = Join-Path -Path $downloadsPath -ChildPath "zapret.zip"
-    $logFilePath = Join-Path -Path $desktopPath -ChildPath "download_log.txt"
-
-    Log-Message "Начало работы скрипта."
 
     # Проверка существования папок
     If (-Not (Test-Path $downloadsPath)) {
-        Log-Message "Папка загрузок не существует. Создаю её..."
         New-Item -ItemType Directory -Path $downloadsPath -Force | Out-Null
     }
     If (-Not (Test-Path $desktopPath)) {
-        Log-Message "Папка рабочего стола не существует. Создаю её..."
         New-Item -ItemType Directory -Path $desktopPath -Force | Out-Null
     }
 
@@ -92,11 +78,8 @@ try {
     # Распаковка
     Unpack-Zip -filePath $zipPath -extractTo $desktopPath
     
-    # Печать пути перед удалением
-    Log-Message "Попытка удалить файл: $zipPath"
-    
     # Удаление файла zapret.zip после распаковки
     Remove-ZipFile -filePath $zipPath
 } catch {
-    Log-Message "Общая ошибка: $_"
+    exit 1
 }
